Final touches on readme and presentation

--- a/src/main/presentation/NLP_with_Mahout.tex
+++ b/src/main/presentation/NLP_with_Mahout.tex
@@ -292,6 +292,7 @@ conflict&transfer&us&fence&year\\ \hline
 \frame{\frametitle{Questions \& Bibliography}
 Thanks for your attention!  Questions? \\
 \begin{itemize}
+\item Code and scripts for this talk at http://github.com/cestella/NLPWithMahout
 \item Find me at http://caseystella.com 
 \item Twitter handle: @casey\_stella 
 \item Email address: cstella@hortonworks.com
